packages/isar_plus/test/errors/class/constructor_named.dart
// unnamed constructor

import 'package:isar_plus/isar_plus.dart';

@collection
class Model {
  Model.create();

  late int id;
}
